conformance/tests/gateway-with-addresses.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-with-one-address
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  addresses:
    - type: IPAddress
      value: 1.2.3.4
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-with-two-addresses
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  addresses:
    - type: IPAddress
      value: 1.2.3.4
    - type: Hostname
      value: foo.bar
